--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/_Main/Maps/MazeLevel.MazeLevel
 EditorStartupMap=/Game/_Main/Maps/MazeLevel.MazeLevel
 GlobalDefaultGameMode=/Game/_Main/Blueprints/Baseclasses/GM_MazeGameMode.GM_MazeGameMode_C
+GameInstanceClass=/Game/_Main/Blueprints/BaseClass/GI_MazeGameInstance.GI_MazeGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
