--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/_Main/Maps/MazeLevel.MazeLevel
+GameDefaultMap=/Game/_Main/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/_Main/Maps/MazeLevel.MazeLevel
-GlobalDefaultGameMode=/Game/_Main/Blueprints/Baseclasses/GM_MazeGameMode.GM_MazeGameMode_C
+GlobalDefaultGameMode=/Script/Engine.GameMode
 GameInstanceClass=/Game/_Main/Blueprints/BaseClass/GI_MazeGameInstance.GI_MazeGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
